# capture-powermetrics

./: pyproject.toml
src/: capture_powermetrics.py  python_powermetrics.py
