[tool.poetry]
name = "python-powermetrics"
version = "0.1.0"
description = ""
authors = ["keighbee <kb@huggingface.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]
